fix: update css to resolve the overlapping issue in schema list

--- a/src/dataExplorer/components/Schema.scss
+++ b/src/dataExplorer/components/Schema.scss
@@ -54,6 +54,9 @@
   border-left: 1px solid $cf-grey-25;
   padding-left: $cf-space-2xs;
   margin-top: $cf-space-xs;
+  .cf-accordion--body-container--expanded {
+    animation: none;
+  }
 }
 
 .selector-title {
